Fixed error in single production - render before reference is available

--- a/frontend/src/app/production/production-single/production-single.component.html
+++ b/frontend/src/app/production/production-single/production-single.component.html
@@ -1,4 +1,6 @@
-<app-production-find-show  [singleProd]="production"></app-production-find-show>
-<div class="grid">
-    <button (click)="onDelete()" class="btn btn-danger"> Delete This Lot</button>
+<div *ngIf="production">
+    <app-production-find-show [singleProd]="production"></app-production-find-show>
+    <div class="grid">
+        <button (click)="onDelete()" class="btn btn-danger"> Delete This Lot</button>
+    </div>
 </div>
