--- a/frontend/src/app/machine/machine-show/machine-show.component.css
+++ b/frontend/src/app/machine/machine-show/machine-show.component.css
@@ -8,6 +8,11 @@
     grid-template-columns: 50% 50%;
 }
 
+.grid3 { 
+    display: grid;
+    grid-template-columns: 100%;
+}
+
 .border{
     border: solid;
 }
