Updated view and averages for lathe production display

--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
@@ -1,24 +1,34 @@
 
 <h1 class="centered">{{machine}}</h1>
+<h3>Parts Made To Operation on This Machine: {{total}}</h3>
+<h3>Day Shift Average: {{dayAvg}}</h3>
+<h3>Night Shift Average: {{nightAvg}}</h3>
+<h3>Over Night Average: {{overNightAvg}}</h3>
 <div class="grid">
-  <div class="border"><h5 class="centered">{{days[0]}}</h5></div>
-  <div class="border"><h5 class="centered">{{days[1]}}</h5></div>
-  <div class="border"><h5 class="centered">{{days[2]}}</h5></div>
-  <div class="border"><h5 class="centered">{{days[3]}}</h5></div>
-  <div class="border"><h5 class="centered">{{days[4]}}</h5></div>
-  <div class="border"><h5 class="centered">{{days[5]}}</h5></div>
-  <div class="border"><h5 class="centered">{{days[6]}}</h5></div>
+  <div class="border"><h5 class="bold">{{days[0]}}</h5></div>
+  <div class="border"><h5 class="bold">{{days[1]}}</h5></div>
+  <div class="border"><h5 class="bold">{{days[2]}}</h5></div>
+  <div class="border"><h5 class="bold">{{days[3]}}</h5></div>
+  <div class="border"><h5 class="bold">{{days[4]}}</h5></div>
+  <div class="border"><h5 class="bold">{{days[5]}}</h5></div>
+  <div class="border"><h5 class="bold">{{days[6]}}</h5></div>
   <div *ngFor="let date of firstDayOfMonth">
-    <div class="border"><h5 class="white-text">{{date}}</h5></div>
+    <div class="border"><h5 class="white-text">{{date}}<h5><br><br></h5><h5><br><br></h5><h5><br><br></h5></h5></div>
   </div>  
   <div *ngFor="let set of proDates">
     <div *ngIf="set.date !== today"  (click)="onViewDate(['day', year, month+1, set.date])" class="border">
-      <h5>{{set.date}}</h5>
-      <h5 *ngFor="let prod of set.production">{{prod.shift}}: {{prod.quantity}}</h5>
+      <h5 class="bold">{{set.date}}</h5>
+      <h5 *ngFor="let prod of set.production; let i=index">{{prod.shift}}: <br><strong>{{prod.quantity}}</strong></h5>
+      <h5 *ngIf="set.production.length == 0"><h5><br><br></h5><h5><br><br></h5><h5><br><br></h5></h5>
+      <h5 *ngIf="set.production.length == 1"><h5><br><br></h5><h5><br><br></h5></h5>
+      <h5 *ngIf="set.production.length == 2"><h5><br><br></h5></h5>
     </div>
     <div *ngIf="set.date == today" (click)="onViewDate(['day', year, month+1, set.date])" class="today-border">
-      <h5>{{set.date}}</h5>
-      <h5 *ngFor="let prod of set.production">{{prod.shift}}: {{prod.quantity}}</h5>
+      <h5 class="bold">{{set.date}}</h5>
+      <h5 *ngFor="let prod of set.production; let i=index">{{prod.shift}}: <br><strong>{{prod.quantity}}</strong></h5>
+      <h5 *ngIf="set.production.length == 0"><h5><br><br></h5><h5><br><br></h5><h5><br><br></h5></h5>
+      <h5 *ngIf="set.production.length == 1"><h5><br><br></h5><h5><br><br></h5></h5>
+      <h5 *ngIf="set.production.length == 2"><h5><br><br></h5></h5>
     </div>
   </div>  
 </div>
