--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
@@ -1,9 +1,11 @@
 
-<h1 class="centered">{{machine}}</h1>
-<h3>Parts Made To Operation on This Machine: {{total}}</h3>
-<h3>Day Shift Average: {{dayAvg}}</h3>
-<h3>Night Shift Average: {{nightAvg}}</h3>
-<h3>Over Night Average: {{overNightAvg}}</h3>
+<h2 class="bold">{{machine}}</h2>
+<h3>Parts Made To Operation on This Machine: <br><strong>{{total}}</strong></h3>
+<div class="grid2">
+  <h3>Day Shift Average: <br><strong>{{dayAvg}}</strong></h3>
+  <h3>Night Shift Average: <br><strong>{{nightAvg}}</strong></h3>
+  <h3>Over Night Average: <br><strong>{{overNightAvg}}</strong></h3>
+</div>
 <div class="grid">
   <div class="border"><h5 class="bold">{{days[0]}}</h5></div>
   <div class="border"><h5 class="bold">{{days[1]}}</h5></div>
