--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.css
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.css
@@ -8,6 +8,11 @@
     grid-template-columns: 33.33% 33.33% 33.33%;
 }
 
+.grid3 { 
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
 .today-border{
     border-style: solid;
     border-color: black;
