--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
@@ -15,22 +15,26 @@
   <div class="border"><h5 class="bold">{{days[5]}}</h5></div>
   <div class="border"><h5 class="bold">{{days[6]}}</h5></div>
   <div *ngFor="let date of firstDayOfMonth">
-    <div class="border"><h5 class="white-text">{{date}}<h5><br><br></h5><h5><br><br></h5><h5><br><br></h5></h5></div>
+    <div class="border grid3"><h5 class="white-text"><h5><br><br></h5><h5><br><br></h5><h5><br><br></h5></h5></div>
   </div>  
   <div *ngFor="let set of proDates">
     <div *ngIf="set.date !== today"  (click)="onViewDate(['day', year, month+1, set.date])" class="border">
       <h5 class="bold">{{set.date}}</h5>
-      <h5 *ngFor="let prod of set.production; let i=index">{{prod.shift}}: <br><strong>{{prod.quantity}}</strong></h5>
-      <h5 *ngIf="set.production.length == 0"><h5><br><br></h5><h5><br><br></h5><h5><br><br></h5></h5>
-      <h5 *ngIf="set.production.length == 1"><h5><br><br></h5><h5><br><br></h5></h5>
-      <h5 *ngIf="set.production.length == 2"><h5><br><br></h5></h5>
+      <div class="grid3">
+        <h5 *ngFor="let prod of set.production; let i=index">{{prod.shift}}: <br><strong>{{prod.quantity}}</strong></h5>
+        <h5 *ngIf="set.production.length < 1"><br><br></h5>
+        <h5 *ngIf="set.production.length < 3"><br><br></h5>
+        <h5 *ngIf="set.production.length < 3"><br><br><br></h5>
+      </div>
     </div>
     <div *ngIf="set.date == today" (click)="onViewDate(['day', year, month+1, set.date])" class="today-border">
       <h5 class="bold">{{set.date}}</h5>
-      <h5 *ngFor="let prod of set.production; let i=index">{{prod.shift}}: <br><strong>{{prod.quantity}}</strong></h5>
-      <h5 *ngIf="set.production.length == 0"><h5><br><br></h5><h5><br><br></h5><h5><br><br></h5></h5>
-      <h5 *ngIf="set.production.length == 1"><h5><br><br></h5><h5><br><br></h5></h5>
-      <h5 *ngIf="set.production.length == 2"><h5><br><br></h5></h5>
+      <div class="grid3">
+        <h5 *ngFor="let prod of set.production; let i=index">{{prod.shift}}: <br><strong>{{prod.quantity}}</strong></h5>
+        <h5 *ngIf="set.production.length < 1"><br><br></h5>
+        <h5 *ngIf="set.production.length < 3"><br><br></h5>
+        <h5 *ngIf="set.production.length < 3"><br><br><br></h5>
+      </div>
     </div>
   </div>  
 </div>
