--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
@@ -15,41 +15,47 @@
   <div class="border"><h5 class="bold">{{days[5]}}</h5></div>
   <div class="border"><h5 class="bold">{{days[6]}}</h5></div>
   <div *ngFor="let date of firstDayOfMonth">
-    <div class="border grid3"><h5 class="white-text"><h5><br><br></h5><h5><br><br></h5><h5><br><br></h5></h5></div>
+    <div class="border border-height">
+    </div>
   </div>  
   <div *ngFor="let set of proDates">
-    <div *ngIf="set.date !== today"  (click)="onViewDate(['day', year, month+1, set.date])" class="border">
-      <h5 class="bold">{{set.date}}</h5>
+    <div *ngIf="set.date !== today" class="border border-height">
+      <div class="grid100"> 
+        <button (click)="onViewDate(['day', year, month+1, set.date])" class="btn btn-primary">
+          <h6>View Day</h6>
+        </button>
+      </div>
+      <h5 class="bold short">{{set.date}}</h5>
       <div class="grid3">
         <h5 *ngFor="let prod of set.production; let i=index">
-          {{prod.shift}}: <br><strong>{{prod.quantity}}</strong>
-          <button *ngIf="!prod.average" class='btn btn-success'>
-            <h6>Avg</h6>
+          {{prod.shift}}: <div *ngIf="prod.shift != 'Over-Night'"><br></div><strong>{{prod.quantity}}</strong>
+          <button *ngIf="!prod.average" (click)="changeAvg(prod.average, prod.id)" class='btn btn-success'>
+            Avg
           </button>
-          <button *ngIf="prod.average" class='btn btn-danger'>
-            <h6>Avg</h6>
+          <button *ngIf="prod.average" (click)="changeAvg(prod.average, prod.id)" class='btn btn-danger'>
+            Avg
           </button>
         </h5>
-        <h5 *ngIf="set.production.length < 1"><br><br></h5>
-        <h5 *ngIf="set.production.length < 3"><br><br></h5>
-        <h5 *ngIf="set.production.length <= 3"><br><br><br></h5>
       </div>
     </div>
-    <div *ngIf="set.date == today" (click)="onViewDate(['day', year, month+1, set.date])" class="today-border">
-      <h5 class="bold">{{set.date}}</h5>
+    <div *ngIf="set.date == today" class="today-border border-height">
+      <div class="grid100"> 
+        <button (click)="onViewDate(['day', year, month+1, set.date])" class="btn btn-primary">
+          <h6>View Day</h6>
+        </button>
+      </div>
+      <h5 class="bold short">{{set.date}}</h5>
       <div class="grid3">
         <h5 *ngFor="let prod of set.production; let i=index">
-          {{prod.shift}}: <br><strong>{{prod.quantity}}</strong>
-          <button *ngIf="!prod.average" class='btn btn-success'>
-            <h6>Avg</h6>
+          {{prod.shift}}: <div *ngIf="prod.shift != 'Over-Night'"><br></div><strong>{{prod.quantity}}</strong>
+          <br>
+          <button *ngIf="!prod.average" (click)="changeAvg(prod.average, prod.id)" class='btn btn-success'>
+            Avg
           </button>
-          <button *ngIf="prod.average" class='btn btn-danger'>
-            <h6>Avg</h6>
+          <button *ngIf="prod.average" (click)="changeAvg(prod.average, prod.id)" class='btn btn-danger'>
+            Avg
           </button>
         </h5>
-        <h5 *ngIf="set.production.length < 1"><br><br></h5>
-        <h5 *ngIf="set.production.length < 3"><br><br></h5>
-        <h5 *ngIf="set.production.length <= 3"><br><br><br></h5>
       </div>
     </div>
   </div>  
