updated lathe production mathodology with production from components for each day of the month

--- a/frontend/src/app/production/production-by-machine/production-by-machine.component.html
+++ b/frontend/src/app/production/production-by-machine/production-by-machine.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="ready">
   <h1 class="bold">{{months[month]}}</h1>
   <div *ngFor="let lot of prodLots; let i = index">
-    <app-production-calender [production]="lot" [month]="month" [machine]="fullMach[i].machine"></app-production-calender>  
+    <app-production-calender [production]="lot" [month]="month" [machine]="fullMach[i]"></app-production-calender>  
   </div>
 </div>
 <div *ngIf="auth.machType == 'mill'">
