--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -21,6 +21,9 @@ h1, h2, h3, h4, h5, h6{
     font-weight: 700;
 }
 
+.centered{
+    text-align: center;
+}
 
 @media only screen and (max-width: 768px) {
     h2{
