fixed loading of lathe production after viewing mill production

--- a/frontend/src/app/production/production-by-machine/production-by-machine.component.html
+++ b/frontend/src/app/production/production-by-machine/production-by-machine.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="auth.machType == 'lathe'">
+<div *ngIf="auth.machType == 'lathe' && ready">
   <h1 class="bold">{{months[month]}}</h1>
   <div *ngFor="let mach of fullMach; let i = index">
     <app-production-calender [month]="month" [machine]="mach"></app-production-calender>  
