--- a/frontend/src/app/production/production-by-machine/production-day/production-day.component.css
+++ b/frontend/src/app/production/production-by-machine/production-day/production-day.component.css
@@ -7,3 +7,16 @@ h5{
     display: grid;
     grid-template-columns: 50% 50%;
 }
+
+.short{
+    padding: 0% 0% 0% 0%;
+    margin: 0% 0% 0% 0%;
+}
+
+.middle{
+    margin: auto;
+}
+
+.smaller{
+    height: 30px;
+}
