--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.css
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.css
@@ -13,6 +13,11 @@
     grid-template-columns: 100%;
 }
 
+.grid50 { 
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
 .today-border{
     border-style: solid;
     border-color: black;
