--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
@@ -1,6 +1,8 @@
-
 <h2 class="bold">{{machine.machine}}</h2>
-<h3>Parts Made To Operation on This Machine: <br><strong>{{total}}</strong></h3>
+<div class="grid50">
+    <h3>Parts Made On Machine: <br><strong>{{machTotal}}</strong></h3>
+    <h3>Parts Made To Operation: <br><strong>{{total}}</strong></h3>
+</div>
 <div class="grid2">
   <h3>Day Shift Average: <br><strong>{{dayAvg}}</strong></h3>
   <h3>Night Shift Average: <br><strong>{{nightAvg}}</strong></h3>
