--- a/frontend/src/app/production/production-by-machine/production-day/production-day.component.css
+++ b/frontend/src/app/production/production-by-machine/production-day/production-day.component.css
@@ -14,9 +14,28 @@ h5{
 }
 
 .middle{
+    text-align: center;
     margin: auto;
 }
 
 .smaller{
     height: 30px;
+    width: 45px;
+}
+
+.in-button{
+    float: right;
+    margin: auto;
+}
+
+
+
+@media screen and (max-width: 900px) {
+    .smaller{
+        height: 25px;
+        width: 40px;
+    }
+    h6{
+        font-size: x-small;
+    }
 }
