--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
@@ -1,12 +1,17 @@
 <h2 class="bold">{{machine.machine}}</h2>
-<div class="grid50">
-    <h3>Parts Made On Machine: <br><strong>{{machTotal}}</strong></h3>
-    <h3>Parts Made To Operation: <br><strong>{{total}}</strong></h3>
-</div>
 <div class="grid2">
   <h3>Day Shift Average: <br><strong>{{dayAvg}}</strong></h3>
   <h3>Night Shift Average: <br><strong>{{nightAvg}}</strong></h3>
   <h3>Over Night Average: <br><strong>{{overNightAvg}}</strong></h3>
+</div>
+<div class="grid50split">
+    <h3>Parts Made On Machine: <br><strong>{{machTotal}}</strong></h3>
+    <div class="grid100">
+      <div class='short'><br></div>
+      <button *ngIf="!editMode" class='btn btn-info smaller' (click)="editProd()"><h3 class="middle">Edit</h3></button>
+      <button *ngIf="editMode" class='btn btn-success smaller' (click)="submitAll()"><h3 class="middle">Submit</h3></button>
+    </div>
+    <h3>Parts Made To Operation: <br><strong>{{total}}</strong></h3>
 </div>
 <div class="grid">
   <div class="border"><h5 class="bold">{{days[0]}}</h5></div>
@@ -28,7 +33,7 @@
         </button>
       </div>
       <h5 class="bold short">{{day}}</h5>
-      <app-production-day [mach]="machine" [date]="year+'-'+monthHold+'-'+day"></app-production-day>
+      <app-production-day [mach]="machine" [editMode]="editMode" [date]="year+'-'+monthHold+'-'+day"></app-production-day>
     </div>
     <div *ngIf="day == today" class="today-border border-height">
       <div class="grid100"> 
