--- a/frontend/src/app/production/production-by-machine/production-day/production-day.component.css
+++ b/frontend/src/app/production/production-by-machine/production-day/production-day.component.css
@@ -23,6 +23,10 @@ h5{
     width: 45px;
 }
 
+.small-break{
+    line-height: 0;
+}
+
 .in-button{
     float: right;
     margin: auto;
@@ -33,7 +37,7 @@ h5{
 @media screen and (max-width: 900px) {
     .smaller{
         height: 25px;
-        width: 40px;
+        width: 41px;
     }
     h6{
         font-size: x-small;
