Updated functionality for lathe production updating

--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
@@ -8,7 +8,7 @@
     <h3>Parts Made On Machine: <br><strong>{{machTotal}}</strong></h3>
     <div class="grid100">
       <div class='short'><br></div>
-      <button *ngIf="!editMode" class='btn btn-info smaller' (click)="editProd()"><h3 class="middle">Edit</h3></button>
+      <button *ngIf="!editMode" class='btn btn-info smaller' (click)="editProd()"><h3 class="middle">Update</h3></button>
       <button *ngIf="editMode" class='btn btn-success smaller' (click)="submitAll()"><h3 class="middle">Submit</h3></button>
     </div>
     <h3>Parts Made To Operation: <br><strong>{{total}}</strong></h3>
