--- a/frontend/src/app/production/production-quantity/production-quantity.component.css
+++ b/frontend/src/app/production/production-quantity/production-quantity.component.css
@@ -1,3 +1,9 @@
 .hidden{
     visibility: hidden;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
