Added cancel, fixed styling and main submission by button

--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.css
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.css
@@ -13,6 +13,11 @@
     grid-template-columns: 100%;
 }
 
+.grid50 { 
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
 .grid50split { 
     display: grid;
     grid-template-columns: 37% 26% 37%;
